--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "engsoft",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -16,5 +16,13 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-cmd": "^4.0.0"
-  }
+  },
+  "repository": {
+    "url": "https://github.com/nmcardoso/engsoft"
+  },
+  "keywords": [
+    "node",
+    "glitch",
+    "express"
+  ]
 }
