--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - name: Change current working directory to client
+        run: |
+          cd client
       - name: Install Packages
         run: npm ci
       - name: Build & Deploy to GH Pages
@@ -19,7 +22,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "Github Actions"
           git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/nmcardoso/engsoft.git
-          cd client
           npm run build
           npm run deploy
 
