--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: '12.x'
+          node-version: '14.x'
       - name: Change current working directory to client
         run: |
           cd client
       - name: Install Packages
-        run: npm ci
+        run: npm install
       - name: Build & Deploy to GH Pages
         run: |
           git config --global user.email "actions@github.com"
