--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "Github Actions"
-          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/nmcardoso/engsoft.git
+          git remote set-url origin https://nmcardoso:${{ secrets.GITHUB_TOKEN }}@github.com/nmcardoso/engsoft.git
           cd client
           npm run deploy
 
