--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Packages
         run: |
           cd client
-          npm install
+          npm ci
       - name: Build & Deploy to GH Pages
         run: |
           git config --global user.email "actions@github.com"
