:package: add new package pg

--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "node-cmd": "^4.0.0"
+    "node-cmd": "^4.0.0",
+    "pg": "^8.6.0"
   },
   "repository": {
     "url": "https://github.com/nmcardoso/engsoft"
