update k8s service name to api-prod

--- a/chart/templates/ingressv1.yaml
+++ b/chart/templates/ingressv1.yaml
@@ -15,7 +15,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: api
+                name: api-prod
                 port:
                   number: 8080
 {{- end }}
