--- a/chart/templates/api-service.yaml
+++ b/chart/templates/api-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: api-prod
   labels:
     {{- include "engsoft.labels" . | nindent 4 }}
 spec:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: api
+    app.kubernetes.io/name: api-prod
     app.kubernetes.io/instance: {{ .Release.Name }}
