--- a/chart/templates/ingressbeta1.yaml
+++ b/chart/templates/ingressbeta1.yaml
@@ -13,6 +13,6 @@ spec:
         paths:
           - path: /api
             backend:
-              serviceName: api
+              serviceName: api-prod
               servicePort: 8080
 {{- end }}
