--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "engsoft",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_ENV=dev node server.js",
+    "production": "NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
