--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "engsoft",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=dev node server.js",
+    "start": "NODE_ENV=dev nodemon server.js",
     "production": "NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "node-cmd": "^4.0.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.2"
   },
   "repository": {
     "url": "https://github.com/nmcardoso/engsoft"
@@ -28,6 +30,7 @@
     "express"
   ],
   "devDependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.7"
   }
 }
