--- a/chart/templates/ingressbeta1.yaml
+++ b/chart/templates/ingressbeta1.yaml
@@ -11,7 +11,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /api
+          - path: /
             backend:
               serviceName: api-prod
               servicePort: 8080
