--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "node": "12.x"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "node-cmd": "^4.0.0",
