--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "create-react-app": "^4.0.3",
     "gh-pages": "^3.1.0"
   },
   "scripts": {
