--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-cmd": "^4.0.0",
     "pg": "^8.6.0",
+    "pg-copy-streams": "^5.1.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2"
   },
