install postgresql-client

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /src
 
 COPY package.json ./
 RUN npm install
+RUN apt-get update && apt-get install -y postgresql-client
 
 COPY . .
 CMD ["npm", "run", "production"]
