--- a/api/package.json
+++ b/api/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "12.x"
+    "node": "14.x"
   },
   "dependencies": {
+    "@aternus/csv-to-xlsx": "^1.0.19",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
