--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@aternus/csv-to-xlsx": "^1.0.19",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
