--- a/vacivida/package.json
+++ b/vacivida/package.json
@@ -13,8 +13,11 @@
     "node": "14.x"
   },
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "node-cmd": "^4.0.0"
+    "nanoid": "^3.1.23",
+    "node-cmd": "^4.0.0",
+    "socket.io": "^4.1.3"
   },
   "repository": {
     "url": "https://github.com/nmcardoso/engsoft"
