--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=dev nodemon server.js",
     "production": "NODE_ENV=production node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:sync": "NODE_ENV=dev node utils/restore_db.js"
   },
   "author": "",
   "license": "ISC",
