--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=dev nodemon server.js",
     "production": "NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:sync": "NODE_ENV=dev node utils/restore_db.js"
+    "db:sync": "NODE_ENV=dev node utils/sync_db.js"
   },
   "author": "",
   "license": "ISC",
