--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "engsoft",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon server.js",
+    "start": "NODE_ENV=dev npx nodemon server.js",
     "production": "NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:sync": "NODE_ENV=dev node utils/sync_db.js"
