--- a/api/package.json
+++ b/api/package.json
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "node-cmd": "^4.0.0",
     "pg": "^8.6.0",
     "pg-copy-streams": "^5.1.1",
     "pg-hstore": "^2.3.4",
+    "readline": "^1.3.0",
     "sequelize": "^6.6.2"
   },
   "repository": {
