--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,8 @@
     "@aternus/csv-to-xlsx": "^1.0.19",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "is-utf8": "^0.2.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "node-cmd": "^4.0.0",
